# gnostr-bits

./: .gitignore  Cargo.toml  GNUmakefile  Makefile  bitcoin-26.0.local.torrent  cargo.mk  rust-toolchain.toml
.github/workflows/: gh-release.yml  gnostr-docker.yml  release.yml  test.yml
crates/bits/: Cargo.toml
crates/gnostr-bits/: Cargo.toml
crates/gnostr-bits/src/: main.rs
crates/modal/: Cargo.toml
crates/rqbit/: Cargo.toml
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml
torrents/: bitcoin-0.10.0.torrent  bitcoin-0.10.1.torrent  bitcoin-0.10.2.torrent  bitcoin-0.11.0.torrent  bitcoin-0.11.1.torrent  bitcoin-0.11.2.torrent  bitcoin-0.12.0.torrent  bitcoin-0.12.1.torrent  bitcoin-0.13.0.torrent  bitcoin-0.13.1.torrent  bitcoin-0.13.2.torrent  bitcoin-0.14.0.torrent  bitcoin-0.14.1.torrent  bitcoin-0.14.2.torrent  bitcoin-0.14.3.torrent  bitcoin-0.15.0.1.torrent  bitcoin-0.15.0.torrent  bitcoin-0.15.1.torrent  bitcoin-0.15.2.torrent  bitcoin-0.16.0.torrent  bitcoin-0.16.1.torrent  bitcoin-0.16.2.torrent  bitcoin-0.16.3.torrent  bitcoin-0.17.0.1.torrent  bitcoin-0.17.0.torrent  bitcoin-0.17.2.torrent  bitcoin-0.18.1.torrent  bitcoin-0.19.0.1.torrent  bitcoin-0.20.1.torrent  bitcoin-0.20.2.torrent  bitcoin-0.21.1.torrent  bitcoin-22.0.torrent  bitcoin-23.1.torrent  bitcoin-23.2.torrent  bitcoin-24.1.torrent  bitcoin-24.2.torrent  bitcoin-25.2.torrent  bitcoin-26.1.torrent  bitcoin-26.2.torrent  bitcoin-28.0.torrent
