[workspace]
resolver = "2"
members = [
    "crates/bencode",
    "crates/buffers",
    "crates/clone_to_owned",
    "crates/dht",
    "crates/gnostr-bits",
    "crates/librqbit",
    "crates/librqbit_core",
    "crates/peer_binary_protocol",
    "crates/sha1w",
    "crates/upnp"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true

[profile.release-github]
inherits = "release"
debug = false
