[workspace]
resolver = "2"
members = [
    "crates/bencode",
    "crates/buffers",
    "crates/clone_to_owned",
    "crates/dht",
    "crates/bits",
    "crates/librqbit",
    "crates/librqbit_core",
    "crates/modal",
    "crates/peer_binary_protocol",
    "crates/sha1w",
    "crates/upnp"
]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "gnostr-org/homebrew-gnostr-org"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = true

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true

[profile.release-github]
inherits = "release"
debug = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
